# portfolio_app

./: ddd  pyproject.toml
portfolio_app/: app.ui  app_ui.py  main.py  portfolio_optimizer.py  req.txt
tests/: test_portfolio_app.py
