[tool.poetry]
name = "portfolio_app"
version = "0.1.0"
description = ""
authors = ["Иван Косилов <idkosilov@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PySide6 = "^6.3.0"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
pyportfolioopt = "^1.5.3"
pyinstaller = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
